# nsi-designer

./: LICENSE  README.md  pyproject.toml
nsi_designer/: __init__.py  app.py  assets.py  generator.py  model.py  ui_main.py
nsi_designer/ui/: __init__.py  dialogs.py  forms_assets.py  forms_metadata.py  forms_presets.py  helpers.py  main_window.py  tables_env.py  tables_registry.py
website/: index.html
